app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .infoText {
        @apply p-4 bg-gray-500/50 rounded-lg max-w-[300px]
    }
    .strokeText {
        -webkit-text-stroke: 2px #2EBFA5;
        color: white;
    }
    .animate-slide-up-opacity {
        animation: slide-up-opacity 1s ease-in-out;
      }
    .fullHeight {
        height: 100dvh;
    }
    .child {
        height: calc(100% - 136px);
      }
    .sideBarWidth {
        width: 70vw;
    }
    .sideBarButton {
        left: 70vw;
    }
}

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@300;400;500;600;700&display=swap');
    
html {
    scroll-behavior: smooth;
    
    /* height: -webkit-fill-available; */
    /* height: 100dvh; */
}

body {
    font-family: 'Chakra Petch', sans-serif;
  color: rgb(var(--foreground-rgb));
  margin: 0;
  padding: 0;
  height: 100dvh;
  /* height: -webkit-fill-available; */
  /* height: 100dvh; */

  /* background: linear-gradient(
      to right,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb)); */
}

/* Custom Scrollbar Styling */
/* Webkit (Chrome, Safari) */
::-webkit-scrollbar {
    width: 8px;
  }
  
  ::-webkit-scrollbar-thumb {
    background-color: #13505B;
    border-radius: 4px;
  }
  
  ::-webkit-scrollbar-thumb:hover {
    background-color: #2EBFA5;
  }
  
  /* Firefox */
  body::-webkit-scrollbar {
    width: 8px;
    height: 0px;
  }
  
  body::-webkit-scrollbar-thumb {
    background-color: #13505B;
    border-radius: 4px;
  }
  
  body::-webkit-scrollbar-thumb:hover {
    background-color: #2EBFA5;
  }
  
  body {
    padding: 0;
    margin: 0;
    scrollbar-width: thin;
    scrollbar-color: #2EBFA5 #13505B;
  }

  @keyframes slide-up-opacity {
    from {
      transform: translateY(20px);
      opacity: 0;
    }
    to {
      transform: translateY(0);
      opacity: 1;
    }
  }

